--- a/static/styles/media/pagina-inicial-media.css
+++ b/static/styles/media/pagina-inicial-media.css
@@ -1,114 +1,81 @@
-/* Media de telas para smartphones */
-@media (max-width: 576px) {
+/* Media para o menor celular que existe no mercado Iphone SE */
+@media (min-width: 320px){
 
     .titulo-destaque .part1 {
-        font-size: 3.5rem;
+        font-size: 2.5rem;
+        margin-left: 0.5rem;
+        background-color: blue;
+    }
+
+    .titulo-destaque .part2{
+        font-size: 2.5rem;
+    }
+
+    .container-grid {
+        width: 8rem;
+        height: 8rem;
         margin-left: 1rem;
+        margin-bottom: 2rem;
+    }
+
+    /*AQUI COMEÇA A GALERIA*/
+    .c-galeria{
+    
+        width: 40%;
+        display: grid;
+        grid-template-columns: repeat(2, 3fr);
+        grid-auto-rows: 8rem;
+        grid-column-gap: 2rem;
+        grid-row-gap: 5rem;
+        margin-bottom: 15rem;
+        margin-top: 10rem;
+        margin-right: 23rem;
+        /*DEFINE O TAMANHO DO EFEITO NA IMAGEM QUANDO O MOUSE É PASSADO*/
+        flex: 2 5 10px;
+    }
+
+    .servicos img{
+        width: 100%;
+        height: 10rem;
+    }
+
+
+    .mensagem h2{
+        font-size: 2.2rem;
+        margin-top: 5rem;
+    }
+
+    .mensagem input{
+        width: 90%;
+        height: 10rem;
+        margin-top: 2rem;
+        margin-left: 0.5rem;
+    }
+
+
+}
+
+
+@media (min-width: 576px){
+
+    .titulo-destaque .part1 {
+        font-size: 5rem;
+        margin-left: 0.5rem;
+        background-color: aqua;
     }
 
     .titulo-destaque .part2 {
-        font-size: 3.5rem;
+        font-size: 5rem;
     }
 
     .container-grid {
         width: 10rem;
-        height: 12rem;
-        margin-bottom: 3rem;
-    }
-
-    .c-galeria{
-    
-        width: 100%;
-        display: grid;
-        grid-template-columns: repeat(2, 2fr);
-        grid-auto-rows: 12rem;
-        grid-column-gap: 2rem;
-        grid-row-gap: 3rem;
-     
-    }
-
-    .servicos{
-        /*MARGEM EXTERNA*/
-        margin: 2rem;
-        margin-top: 2rem;
-        /*LARGURA DO CARD.*/
-        width: 70%;
-        /*COR DE FUNDO DO CARD*/
-        height: 90%;
-        /*CENTRALIZA O TEXTO*/
-        /*SUAVIZAR EFEITO DA TRANSIÇÃO*/
-        transition: transform 0.5s;
-        flex-direction: column;
-      }
-
-}
-
-/* Media de telas para Tablets */
-@media (min-width: 768px) {
-
-
-    .container-cadastramento{
-        gap: 20rem;
-    }
-
-    .cadastramento-titulo span{
-        font-size: 2.5rem;
-        margin-left: 10rem;
-
-    }   
-    
-    .container-img {
-        width: 10rem;
         height: 20rem;
+        margin-left: 1rem;
+        margin-bottom: 2rem;
     }
 
-    .form_container {
-        width: 25rem;
-        margin-right: 2.5rem;
-        
-    }
 
-}
 
-/* Media de telas para Desktop */
-@media (min-width: 1200px) {
-
-    .container-cadastramento{
-        gap: 25rem;
-    }
-
-    .cadastramento-titulo span{
-        font-size: 3rem;
-    }   
-    
-    .container-img {
-        height: 15rem;
-    }
-
-    .form_container {
-        width: 35rem;
-    }
-
-}
-
-/* Media de telas para Desktop */
-@media (min-width: 1440px){
-
-    .container-cadastramento{
-        gap: 35rem;
-    }
-
-    .cadastramento-titulo span{
-        font-size: 3.5rem;
-    }   
-    
-    .container-img {
-        height: 22.5rem;
-        margin-right: 15rem;
-    }
-
-    .form_container {
-        width: 40rem;
-    }
 
 }
