--- a/templates/login.html
+++ b/templates/login.html
@@ -39,11 +39,11 @@
             <input type="email" placeholder="E-mail" required name="email">
             <input type="password" placeholder="Senha" required name="senha">
             <input list="browsers" name="turma" placeholder="Turma">
-            {% for nomeBD in lista_nomes %}
             <datalist id="browsers">
-            <option value="{{nomeBD['database']}}"></option>
-            </datalist>
+            {% for nomeBD in lista_nomes %}
+            <option value="{{nomeBD['database']}}">{{nomeBD['database']}}</option>
             {% endfor %}
+            </datalist>
             <button type="submit">IR</button>
             <a href="#" id="voltar-register" class="voltar-btn">VOLTAR</a>
         </form>
@@ -78,11 +78,11 @@
             <input type="email" placeholder="E-mail" required name="email">
             <input type="password" placeholder="Senha" required name="senha">
             <input list="browsers" name="turma" placeholder="Turma">
-            {% for nomeBD in lista_nomes %}
             <datalist id="browsers">
-            <option value="{{nomeBD['database']}}"></option>
-            </datalist>
+            {% for nomeBD in lista_nomes %}
+            <option value="{{nomeBD['database']}}">{{nomeBD['database']}}</option>
             {% endfor %}
+            </datalist>
             <button type="submit">IR</button>
             <a href="#" id="voltar-login" class="voltar-btn">VOLTAR</a>
         </form>
