--- a/templates/login.html
+++ b/templates/login.html
@@ -1,12 +1,9 @@
-{% extends "layout.html" %}
-{% block css %}
-<link rel="stylesheet" href="/static/styles/media/layout-media.css">
+
+
+<link rel="stylesheet" href="/static/styles/media/">
 <link rel="stylesheet" href="/static/styles/login.css">
 <link rel="stylesheet" href="/static/styles/variaveis.css">
-{% endblock %}
 
-
-{% block conteudo %}
 
 <div class="container-bem-vindo" id="intro-section">
     <div class="inicio-bem-vindo">
@@ -102,4 +99,3 @@
 
 <script src="/static/js/login.js"></script>
 
-{% endblock %}
