--- a/templates/pagina-inicial.html
+++ b/templates/pagina-inicial.html
@@ -45,7 +45,7 @@
                 </a>
             </div>
 
-
+            {% if "usuario_logado" in session %}
                 <div class="servicos">
                     <figure><img src="/static/img/caixas.png" alt="Não conformidade"></figure>
                     <a href="/rnc">
@@ -92,21 +92,25 @@
                     </div>
                     </a>
                 </div>
-
+            {% endif %}
         </div>  
     </div>
     <!-- Fim da seção de cards -->
 
     <!-- Início da seção de mensagem do professor -->
+    {% if "usuario_logado" in session %}
     <div class="container-mensagem_professor">
 
         <div class="mensagem">
-            <h2> Mensagem do Professor </h2>
-            <!-- Campo "Mensagem" -->
-            <input type="text" placeholder="Mensagem do Professor" class="input-field" name="mensagem">
+            {% for mensagem in mensagens %}
+            <div class="mensagem">
+                <p>{{ mensagem }}</p>
+            </div>
+            {% endfor %}
         </div>
 
     </div>
+    {% endif %}
     <!-- Fim da seção de mensagem do professor -->
 
 </section>
