--- a/templates/professor.html
+++ b/templates/professor.html
@@ -16,9 +16,10 @@
 <div class="container-mensagem_professor">
 
     <div class="mensagem">
-        <h2> Mensagem do Professor </h2>
-        <!-- Campo "Mensagem" -->
-        <input type="text" placeholder="Mensagem do Professor" class="input-field" name="mensagem">
+        <form action="/enviar_mensagem" method="POST">
+            <input type="text" placeholder="Mensagem do Professor" name="mensagem">
+            <button type="submit">ENVIAR</button>
+        </form>        
     </div>
 
 </div>
