--- a/templates/layout.html
+++ b/templates/layout.html
@@ -87,6 +87,9 @@
                             <div class="card">
                                 <a href="/criarBD">Criar Banco de Dados</a>
                             </div>
+                            <div class="card">
+                                <a href="/enviar_mensagem">Enviar Mensagem</a>
+                            </div>
                             {% endif %}
                         </div>
                   </div>
