--- a/static/styles/media/login-media.css
+++ b/static/styles/media/login-media.css
@@ -43,6 +43,11 @@
         height: 31rem;
         margin-bottom: 2.5rem;
     }
+
+    .login-box{
+        margin-top: 27rem;
+        margin-bottom: 2rem;
+    }
 }
 
 
