--- a/static/styles/variaveis.css
+++ b/static/styles/variaveis.css
@@ -41,7 +41,7 @@
     --cor-hover-btn-enviar: #4a148c;
 
     /* Cor do icone de Cadastramento */
-    --cor-icone-cadastramento:linear-gradient(to bottom , #ff2c84, #ff99a5);
+    --cor-icone-cadastramento:linear-gradient(to bottom , #ff217d, #ff8b98);
 
 
 }
