--- a/templates/estoque.html
+++ b/templates/estoque.html
@@ -1,6 +1,7 @@
 <!-- EXTENDENDO O CSS DA PAGINA PRINCIPAL (LAYOUT) -->
 {% block css %}
 <link rel="stylesheet" href="/static/styles/estoque.css">
+<link rel="stylesheet" href="/static/styles/media/estoque-media.css">
 <link rel="stylesheet" href="/static/styles/media/layout-media.css">
 <link rel="stylesheet" href="/static/styles/variaveis.css">
 
@@ -12,18 +13,26 @@
     <!-- Section 01. 
     Essa Section possui um espaço para imagem (cor solicitada pelo cliente) e nome da matéria. -->
     <section class="geral-cadastramento">
-        <section class="container-cadastramento">
+
+        <div class="container-cadastramento">
+
             <div class="cadastramento-titulo">
-                <span class="cadastramento1"> CONTROLE DE ESTOQUE </span>
+                <span class="controle1">CONTROLE DE</span>
+                <span class="controle2">ESTOQUE</span>
             </div>
+
             <div class="container-img"></div>
-        </section>
+
+        </div>
+    
     
     <!-- Section 02. Formulário do CONTROLE DE ESTOQUE
     Section que contém o formulário composto por inputs. Foi utilizado "number" para os dados numéricos, "text" para dados escritos e "date" para datas. Na descrição técnica, optamos por textarea
     porque facilita a inserção de textos extensos. -->
-        <section class="formulario">
+        <div class="formulario">
+
             <div class="form_container">
+
                 <form action="/estoque" method="POST">
     
                     <span class="cadastramentoD"> Cadastrar dados: </span>
@@ -52,8 +61,10 @@
                     <button class="submit-btn">Enviar</button>
     
                 </form>
+
             </div>
-        </section>
+
+        </div>
 
     </section>
 
