--- a/templates/picking.html
+++ b/templates/picking.html
@@ -25,6 +25,34 @@
         <div class="container-img"></div>
     </div>
 
+    <section class="container-tabela">
+        <h1>Produtos Cadastrados</h1>
+        <table>
+            <thead>
+                <tr>
+                    <th>Código</th>
+                    <th>Descrição</th>
+                    <th>Modelo</th>
+                    <th>Fabricante</th>
+                    <th>Número do Lote</th>
+                    <th>Endereçamento</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for produto in lista_produtos %}
+                <tr>
+                    <td>{{produto['codigo']}}</td>
+                    <td>{{produto['descricao']}}</td>
+                    <td>{{produto['modelo']}}</td>
+                    <td>{{produto['fabricante']}}</td>
+                    <td>{{produto['numero_lote']}}</td>
+                    <td>{{produto['enderecamento']}}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </section>
+
 
     <div class="formulario">
 
