--- a/static/styles/rnc.css
+++ b/static/styles/rnc.css
@@ -130,3 +130,23 @@ body{
 .submit-btn:hover {
     background-color: var(#4a148c);
 }
+
+
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+table, th, td {
+    border: 1px solid black;
+}
+
+th, td {
+    padding: 8px;
+    text-align: left;
+}
+
+th {
+    background-color: #f2f2f2;
+}
