--- a/static/styles/variaveis.css
+++ b/static/styles/variaveis.css
@@ -28,7 +28,7 @@
     --cor-cards-pgLogin:radial-gradient(circle, rgba(0,74,173,1) 0%, rgba(60,39,98,1) 100%);
     --cor-btns:#0368D4;
     --cor-fundo-inputs:#003772;
-
+    --cor-fundo-prof:#0a396b;
 
     /* Cores das páginas de funcionais */
     --cor-titulos:#000;
