--- a/static/styles/media/login-media.css
+++ b/static/styles/media/login-media.css
@@ -1,194 +1,521 @@
 /* Media de telas para smartphones */
 @media (max-width: 576px){
-    
-    .inicio-bem-vindo {
-        height: 20rem;
-        width: 18rem;
-        margin-top: 45rem;
+
+    .container-bem-vindo {
+        flex-direction: column;
+        margin-top: 70rem;
     }
 
-    .login-prompt{
-        height: 22rem;
-        width: 18rem;
-        margin-bottom: 3rem;
+    .inicio-bem-vindo, .login-prompt {
+       width: 45rem;
+       height: 40rem;
+       border-radius: 2rem;
     }
 
     .inicio-bem-vindo h2 {
-        margin-top: 1rem;
-        font-size: 1.1rem;
+        margin-top: 3rem;
+        font-size: 3.5rem;
+    }
+
+    .logo-image {
+        margin-top: 4.5rem;
+        width: 17rem; 
+        
     }
 
     .login-prompt h3 {
-        margin-top: 1rem;
-        font-size: 1.2rem;
-    }
-
-
-    .connect-box{
-        margin-top: 20rem;
-        padding: 2rem;
-        width: 18rem;
-        height: 17rem;
-    }
-
-    .connect-box h2{
-        margin-bottom: 1rem;
-        font-size: 1.3rem;
-    }
-
-    .register-box{
-        margin-top: 30rem;
-        padding: 2rem;
-        width: 18rem;
-        height: 31rem;
-        margin-bottom: 2.5rem;
-    }
-
-    .login-box{
-        margin-top: 27rem;
-        margin-bottom: 2rem;
-    }
-}
-
-
-/* Media de telas para smartphones */
-@media (min-width: 600px) {
-
-     /* ************************* Estilização dos cards de boas vindas e de cadastro ************************ */
-
-     .inicio-bem-vindo {
-        height: 21rem;
-        width: 20rem;
-        margin-top: 32rem;
-    }
-
-    .login-prompt{
-        height: 21rem;
-        width: 20rem;
-        margin-bottom: 3rem;
+        margin-top: 4.5rem;
+        margin-bottom: 6rem;
+        font-size: 3rem;
     }
 
     .signup-btn, .login-btn {
-        padding: 1rem 2rem;
-        height: 4.5rem;
+        padding: 2rem 4rem;
+        border-radius: 1rem;
+        height: 7rem;
+        font-size: 2.5rem;
         width: 80%;
     }
 
-    .inicio-bem-vindo h2 {
-        margin-top: 1rem;
-        font-size: 1.3rem;
+    .login-prompt{
+        margin-bottom: 3rem;
     }
 
-    .login-prompt h3 {
-        margin-top: 1rem;
-        font-size: 1.3rem;
-    }
-    
-    .logo-image {
-        width: 12rem; 
+    .login-btn{
+        margin-top: 4rem;
     }
 
-    .connect-box{
-        margin-top: 20rem;
-        padding: 3rem;
-        width: 20rem;
-        height: 20rem;
+    .connect-box {
+        border-radius: 2rem;
+        padding: 2.5rem;
+        width: 45rem;
+        height: 40rem;
     }
 
-    .register-box{
-        margin-top: 3rem;
-    }
-
-    .connect-box h2{
-        margin-bottom: 1rem;
-        font-size: 1.5rem;
+    .connect-box h2 {
+        margin-bottom: 5rem;
+        font-size: 3.5rem;
     }
 
     .connect-box p{
-        font-size: 1rem;
+        font-size: 3rem;
     }
 
-    .register-box{
-        margin-top: 25rem;
+    .account-type {
+        padding: 1rem;
+        border-radius: 1rem;
+        height: 5rem;
+        margin-top: 2.5rem;
+        font-size: 2.5rem;
+    }
+
+    .register-box {
+        border-radius: 2rem;
         padding: 3rem;
-        width: 20rem;
-        height: 34rem;
-        margin-bottom: 2.5rem;
+        width: 45rem;
+        height: 55rem;
     }
-
+    
     .register-box h2{
-        font-size: 1.5rem;
+        font-size: 3.5rem;
+        margin-bottom: 4rem;
     }
 
+    input {
+        padding: 1.5rem;
+        border-radius: 1.5rem;
+        margin-top: 1rem;
+        font-size: 2rem;
+    }
+
+    button[type="submit"] {
+        padding: 1.5rem;
+        border-radius: 1rem;
+        font-size: 2.5rem;
+        margin-top: 2rem;
+    }
+
+    .voltar-btn {
+        margin-top: 3rem; 
+        font-size: 2.5rem;
+    }
+}
+
+/* Media de telas para smartphones */
+@media (min-width: 600px){
+    .container-bem-vindo {
+        flex-direction: column;
+        margin-top: 70rem;
+    }
+
+    .inicio-bem-vindo, .login-prompt {
+       width: 45rem;
+       height: 40rem;
+       border-radius: 2rem;
+    }
+
+    .inicio-bem-vindo h2 {
+        margin-top: 3rem;
+        font-size: 3.5rem;
+    }
+
+    .logo-image {
+        margin-top: 4.5rem;
+        width: 17rem; 
+        
+    }
+
+    .login-prompt h3 {
+        margin-top: 4.5rem;
+        margin-bottom: 6rem;
+        font-size: 3rem;
+    }
+
+    .signup-btn, .login-btn {
+        padding: 2rem 4rem;
+        border-radius: 1rem;
+        height: 7rem;
+        font-size: 2.5rem;
+        width: 80%;
+    }
+
+    .login-prompt{
+        margin-bottom: 3rem;
+    }
+
+    .login-btn{
+        margin-top: 4rem;
+    }
+
+    .connect-box {
+        border-radius: 2rem;
+        padding: 2.5rem;
+        width: 45rem;
+        height: 40rem;
+    }
+
+    .connect-box h2 {
+        margin-bottom: 5rem;
+        font-size: 3.5rem;
+    }
+
+    .connect-box p{
+        font-size: 3rem;
+    }
+
+    .account-type {
+        padding: 1rem;
+        border-radius: 1rem;
+        height: 5rem;
+        margin-top: 2.5rem;
+        font-size: 2.5rem;
+    }
+
+    .register-box {
+        border-radius: 2rem;
+        padding: 3rem;
+        width: 45rem;
+        height: 55rem;
+    }
+    
+    .register-box h2{
+        font-size: 3.5rem;
+        margin-bottom: 4rem;
+    }
+
+    input {
+        padding: 1.5rem;
+        border-radius: 1.5rem;
+        margin-top: 1rem;
+        font-size: 2rem;
+    }
+
+    button[type="submit"] {
+        padding: 1.5rem;
+        border-radius: 1rem;
+        font-size: 2.5rem;
+        margin-top: 2rem;
+    }
+
+    .voltar-btn {
+        margin-top: 3rem; 
+        font-size: 2.5rem;
+    }
 }
 
 /* Media de telas para Tablets */
-@media (min-width: 768px) {
+@media (min-width: 768px){
 
-     /* ************************* Estilização dos cards de boas vindas e de cadastro ************************ */
-
-     .inicio-bem-vindo {
-        height: 21rem;
-        width: 21rem;
-        margin-top: 22rem;
+    .container-bem-vindo {
+        display: flex;
+        align-items: baseline;
+        justify-content: center;
+        align-content: center;
+        gap: 4rem;
+        flex-wrap: wrap;
+        margin-top: 40rem;
+        
     }
 
-    .login-prompt{
-        height: 21rem;
-        width: 20rem;
-        margin-bottom: 3rem;
-    }
-
-    .signup-btn, .login-btn {
-        padding: 1rem 2rem;
-        height: 4.5rem;
-        width: 80%;
+    .inicio-bem-vindo, .login-prompt {
+       width: 35rem;
+       height: 35rem;
+       border-radius: 2rem;
     }
 
     .inicio-bem-vindo h2 {
-        margin-top: 1rem;
-        font-size: 1.4rem;
+        margin-top: 3rem;
+        font-size: 3.5rem;
+    }
+
+    .logo-image {
+        margin-top: 4.5rem;
+        width: 17rem; 
+        
     }
 
     .login-prompt h3 {
-        margin-top: 1rem;
-        font-size: 1.3rem;
-    }
-    
-    .logo-image {
-        width: 13rem; 
-    }
-
-    .connect-box{
-        margin-top: 20rem;
-        padding: 3rem;
-        width: 20rem;
-        height: 20rem;
-    }
-
-    .register-box{
         margin-top: 3rem;
+        margin-bottom: 2.5rem;
+        font-size: 3rem;
     }
 
-    .connect-box h2{
-        margin-bottom: 1rem;
-        font-size: 1.5rem;
+    .signup-btn, .login-btn {
+        padding: 2rem 4rem;
+        border-radius: 1rem;
+        height: 7rem;
+        font-size: 2rem;
+        width: 80%;
+    }
+
+    .login-prompt{
+        margin-bottom: 3rem;
+    }
+
+    .login-btn{
+        margin-top: 4rem;
+    }
+
+    .connect-box {
+        margin-top: 10rem;
+        border-radius: 2rem;
+        padding: 2.5rem;
+        width: 35rem;
+        height: 40rem;
+        margin-bottom: 10rem;
+    }
+
+    .connect-box h2 {
+        margin-bottom: 5rem;
+        font-size: 3.5rem;
     }
 
     .connect-box p{
-        font-size: 1rem;
+        font-size: 3rem;
+    }
+
+    .account-type {
+        padding: 1rem;
+        border-radius: 1rem;
+        height: 5rem;
+        margin-top: 2.5rem;
+        font-size: 2.5rem;
+    }
+
+    .register-box {
+        border-radius: 2rem;
+        padding: 3rem;
+        width: 35rem;
+        height: 55rem;
+        margin-bottom: 3rem;
+        margin-top: 10rem;
+    }
+    
+    .register-box h2{
+        font-size: 3.5rem;
+        margin-bottom: 4rem;
+    }
+
+    input {
+        padding: 1.5rem;
+        border-radius: 1.5rem;
+        margin-top: 1rem;
+        font-size: 2rem;
+    }
+
+    button[type="submit"] {
+        padding: 1.5rem;
+        border-radius: 1rem;
+        font-size: 2.5rem;
+        margin-top: 2rem;
+    }
+
+    .voltar-btn {
+        margin-top: 3rem; 
+        font-size: 2.5rem;
+        font-weight: bold;
+    }
+
+}
+
+/* Media de telas para Desktop */
+@media (min-width: 1200px){
+
+    .container-bem-vindo {
+        gap: 4rem;
+        display: flex;
+        flex-direction: row;
+        margin-top: 5rem;
+    }
+
+    .inicio-bem-vindo, .login-prompt {
+        width: 25rem;
+        height: 30rem;
+        border-radius: 2rem;
+    }
+
+    .inicio-bem-vindo h2{
+        font-size: 2.5rem;
+    }
+
+    .logo-image {
+        margin-top: 4.5rem;
+        width: 15rem; 
+        
+    }
+
+    .login-prompt h3{
+        font-size: 2rem;
+        margin-bottom: 1rem;
+    }
+
+    .signup-btn, .login-btn {
+        padding: 2rem 2rem;
+        border-radius: 1rem;
+        height: 7rem;
+        font-size: 1.5rem;
+        width: 80%;
+    }
+
+    .connect-box{
+        margin-top: 2rem;
+        margin-bottom: 6rem;
+        height: 35rem;
+    }
+
+    .account-type {
+        height: 5rem;
+        margin-top: 2.5rem;
+        font-size: 2rem;
+    }
+
+    .connect-box h2 {
+        margin-bottom: 5rem;
+        font-size: 3rem;
+    }
+
+    .connect-box p{
+        font-size: 3rem;
+        margin-bottom: 1rem;
     }
 
     .register-box{
-        margin-top: 25rem;
-        padding: 3rem;
-        width: 20rem;
-        height: 34rem;
-        margin-bottom: 2.5rem;
+        padding: 2rem;
+        width: 30rem;
+        height: 43rem;
+        margin-bottom: 3rem;
+        margin-top: 10rem;
     }
 
     .register-box h2{
+        font-size: 3rem;
+        margin-bottom: 2rem;
+    }
+
+    input{
+        padding: 1rem;
+        border-radius: 1rem;
         font-size: 1.5rem;
+    }
+
+    button[type="submit"] {
+        padding: 1rem;
+        border-radius: 1rem;
+        font-size: 1.5rem;
+        margin-top: 1rem;
+    }
+
+    .voltar-btn {
+        margin-top: 2rem; 
+        font-size: 1.5rem;
+        font-weight: bold;
+    }
+
+    .login-box{
+        border-radius: 1rem;
+        padding: 1.5rem;
+        width: 25rem;
+    }
+    
+}
+
+/* Media de telas para Desktop */
+@media (min-width: 1440px){
+
+
+    .container-bem-vindo {
+        gap: 4rem;
+        display: flex;
+        flex-direction: row;
+        margin-top: 5rem;
+    }
+
+    .inicio-bem-vindo, .login-prompt {
+        width: 25rem;
+        height: 30rem;
+        border-radius: 2rem;
+    }
+
+    .inicio-bem-vindo h2{
+        font-size: 2.5rem;
+    }
+
+    .logo-image {
+        margin-top: 4.5rem;
+        width: 15rem; 
+        
+    }
+
+    .login-prompt h3{
+        font-size: 2rem;
+        margin-bottom: 1rem;
+    }
+
+    .signup-btn, .login-btn {
+        padding: 2rem 2rem;
+        border-radius: 1rem;
+        height: 7rem;
+        font-size: 1.5rem;
+        width: 80%;
+    }
+
+    .connect-box{
+        margin-top: 2rem;
+        margin-bottom: 6rem;
+        height: 25rem;
+        width: 25rem;
+    }
+
+    .account-type {
+        height: 4rem;
+        margin-top: 2.5rem;
+        font-size: 1.5rem;
+    }
+
+    .connect-box h2 {
+        margin-bottom: 3rem;
+        font-size: 2.5rem;
+    }
+
+    .connect-box p{
+        font-size: 2rem;
+    }
+
+    .register-box{
+        padding: 2rem;
+        width: 25rem;
+        height: 35rem;
+        margin-bottom: 3rem;
+    }
+
+    .register-box h2{
+        font-size: 2rem;
+        margin-bottom: 2rem;
+    }
+
+    input{
+        padding: 1rem;
+        border-radius: 1rem;
+        font-size: 1rem;
+    }
+
+    button[type="submit"] {
+        padding: 1rem;
+        border-radius: 1rem;
+        font-size: 1rem;
+        margin-top: 1rem;
+    }
+
+    .voltar-btn {
+        margin-top: 2rem; 
+        font-size: 1rem;
+        font-weight: bold;
+    }
+
+    .login-box{
+        border-radius: 1rem;
+        padding: 1.5rem;
+        width: 25rem;
     }
 
 }
