--- a/templates/picking.html
+++ b/templates/picking.html
@@ -102,6 +102,10 @@
             </form>
         </div>
 
+        <div class="botoes">
+            <a href="/simulador" class="redirect-btn">Ir para Simulador</a>
+        </div>
+
     </div>
     
 </section>
