Finalização do Front e da responsividade

--- a/templates/professor.html
+++ b/templates/professor.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 {% block css %}
 <link rel="stylesheet" href="/static/styles/professor.css">
+<link rel="stylesheet" href="/static/styles/media/professor-media.css">
 <link rel="stylesheet" href="/static/styles/media/layout-media.css">
 <link rel="stylesheet" href="/static/styles/variaveis.css">
 {% endblock %}
