--- a/static/styles/media/mensagem-media.css
+++ b/static/styles/media/mensagem-media.css
@@ -1,8 +1,9 @@
+/* Media de telas para smartphones */
 @media (max-width: 576px){
 
     .titulomensagem h2{
-        margin-top: 1.5rem;
-        margin-bottom: 3rem;
+        margin-top: 2rem;
+        margin-bottom: 2rem;
         font-size: 2rem;  
         text-align: center;
     }
@@ -17,9 +18,34 @@
 
 
     button[type="submit"] {
-        width: 50%;
-        margin-left:5rem;
+        width: 80%;
+        margin-left:2rem;
+        padding: 1rem;
     }
 
+
+}
+
+/* Media de telas para Tablets */
+@media (min-width: 768px){
+
+    .titulomensagem h2{
+        margin-top: 1rem;
+        margin-bottom: 3rem;
+        font-size: 3rem;  
+        text-align: center;
+    }
+
+
+    input {
+        display: flex;
+        width: 100%;
+        margin-bottom: 2rem;
+    }
+
+
+    button[type="submit"] {
+        width: 100%;
+    }
 
 }
