--- a/static/styles/media/pagina-inicial-media.css
+++ b/static/styles/media/pagina-inicial-media.css
@@ -46,17 +46,33 @@
         height: 11rem;
     }
 
-    .mensagem h2{
-        margin-top: 22rem;
-        font-size:2rem;
+    .titulomensagem-prof{
+        margin-top: 15rem;
+        margin-bottom: 7rem;
     }
 
-    .mensagem input{
-        width: 90%;
-        height: 12rem;
+    .titulomensagem-prof h2{
+        font-size: 2rem;
+    }
+
+    .container-mensagem_professor{
+        height: 20vh;
+        width: 60vw;
+        margin-left: 4.5rem;
+    }
+
+    .mensagem p{
+        font-size: 1rem;
+    }
+
+    .mensagem{
+        width: 60vw;
+        height: 20vh;
+        margin-top: 1rem;
         margin-top: 3rem;
-        margin-bottom: 3rem;
-      }
+        margin-bottom: 14rem;
+        border-radius: 2rem;
+    }
 
 
 }
@@ -99,18 +115,67 @@
         height: 20rem;
     }
 
+    .titulomensagem-prof{
+        margin-top: 5rem;
+        margin-bottom: 7rem;
+    }
+
+    .titulomensagem-prof h2{
+        font-size: 3rem;
+        margin-bottom: 2rem;
+    }
+
     .container-mensagem_professor{
+        height: 25vh;
+        width: 60vw;
+        margin-left: 10rem;
+    }
+
+    .mensagem p{
+        font-size: 1.7rem;
+    }
+
+    .mensagem{
+        width: 60vw;
+        height: 25vh;
+        margin-top: 4rem;
+        margin-top: 3rem;
+        margin-bottom: 16rem;
+        border-radius: 2rem;
+    }
+
+
+}
+
+@media (min-width: 1440px){
+    .titulomensagem-prof{
+        margin-top: 4.5rem;
+        margin-bottom: 10rem;
+      }
+      
+      .titulomensagem-prof h2{
+        font-size: 3.5rem;
+        margin-bottom: 4rem;
+      }
+      
+      
+      .container-mensagem_professor{
+        height: 30vh;
+        width: 40vw;
+        margin-left: 29rem;
+      }
+      
+      
+      .mensagem p{
+        font-size: 1.6rem;
+      }
+      
+      .mensagem{
+        width:  40vw;
+        height: 30vh;
         margin-top: 1rem;
-    }
-
-    .mensagem h2{
-        font-size: 4.5rem;
-    }
-
-    .mensagem input{
-        width: 40rem;
-        height: 18rem;
-    }
-
+        margin-top: 3rem;
+        margin-bottom: 20rem;
+      }
 }
 
