--- a/static/styles/pagina-inicial.css
+++ b/static/styles/pagina-inicial.css
@@ -78,7 +78,7 @@ body, html {
   grid-column-gap: 10px;
   grid-row-gap: 6.5rem;
   align-items: center;
-  margin-bottom: 15rem;
+  margin-bottom: 10rem;
   margin-top: 10rem;
   text-align: center;
   /*DEFINE O TAMANHO DO EFEITO NA IMAGEM QUANDO O MOUSE É PASSADO*/
@@ -151,36 +151,46 @@ body, html {
   width: 100%;
 }
 
+.titulomensagem-prof{
+  text-align: center;
+  margin-top: 4rem;
+  margin-bottom: 10rem;
+}
+
+.titulomensagem-prof h2{
+
+  font-size: 3.5rem;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  color: var(--cor-msg-professor);
+}
+
 
 .container-mensagem_professor{
-  height: 100vh;
-  width: 100vw;
+  height: 30vh;
+  width: 40vw;
+  border-radius: 1.5rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  max-width: 100%;
+  margin-left: 29rem;
 }
 
-.mensagem{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  text-align: center;
-}
 
-.mensagem h2{
+.mensagem p{
   color:var(--cor-msg-professor);
-  font-size: 50;
+  font-size: 1.6rem;
   font-family: "Julius Sans One", sans-serif;
   font-weight: 400;
   font-style: normal;
+  text-align: center;
 }
 
-.mensagem input{
-  width: 100%;
-  height: 15rem;
+.mensagem{
+  width:  40vw;
+  height: 30vh;
+  margin-top: 1rem;
   margin-top: 3rem;
+  margin-bottom: 20rem;
   text-align: center;
   border-radius: 2rem;
   background-color:var(--cor-card-mensagem);
