--- a/templates/pagina-inicial.html
+++ b/templates/pagina-inicial.html
@@ -98,8 +98,15 @@
     <!-- Fim da seção de cards -->
 
     <!-- Início da seção de mensagem do professor -->
+     
+     <div class="titulomensagem-prof">
+        <h2>Mensagem do Professor</h2>
+     </div>
+
     {% if "usuario_logado" in session %}
     <div class="container-mensagem_professor">
+
+        
 
         <div class="mensagem">
             {% for mensagem in lista_mensagens %}
