--- a/templates/layout.html
+++ b/templates/layout.html
@@ -90,6 +90,9 @@
                                 <div class="card">
                                     <a href="/enviar_mensagem">Enviar Mensagem</a>
                                 </div>
+                                <div class="card">
+                                    <a href="/professor/listarBD">Gerenciar Banco de Dados</a>
+                                </div>
                             {% endif %}
                         </div>
                   </div>
