--- a/templates/picking.html
+++ b/templates/picking.html
@@ -103,7 +103,7 @@
         </div>
 
         <div class="botoes">
-            <a href="/simulador" class="redirect-btn">Ir para Simulador</a>
+            <a href="/simulador" class="botao-simulador">Ir para Simulador</a>
         </div>
 
     </div>
