--- a/templates/cadastramento.html
+++ b/templates/cadastramento.html
@@ -35,13 +35,8 @@
                     <!-- Campo "Descrição Técnica" -->
                     <textarea placeholder="Descrição Técnica" class="textarea-field" name="descricao"></textarea>
 
+                    <!-- Campo "Modelo/Tipo do Produto" -->
                     <input list="browsers" name="modelo" placeholder="Modelo do Produto" class="input-field">
-                    <datalist id="browsers">
-                        <option value="Infantil"></option>
-                        <option value="Adulto"></option>
-                        <option value="Íntima"></option>
-                        <option value="Esportiva"></option>
-                    </datalist>
 
                     <!-- Campo "Fabricante" -->
                     <input type="text" placeholder="Fabricante" class="input-field" name="fabricante">
