--- a/templates/picking.html
+++ b/templates/picking.html
@@ -70,13 +70,8 @@
                 <!-- Campo "Descrição Técnica" -->
                 <textarea placeholder="Descrição Técnica" class="textarea-field" name="descTec"></textarea>
 
+                <!-- Campo "modelo/tipo do produto" -->
                 <input list="browsers" name="modeloPick" placeholder="Modelo do Produto" class="input-field">
-                    <datalist id="browsers">
-                        <option value="Infantil"></option>
-                        <option value="Adulto"></option>
-                        <option value="Íntima"></option>
-                        <option value="Esportiva"></option>
-                </datalist>
 
                 <!-- Campo "Fabricante" -->
                 <input type="text" placeholder="Fabricante" class="input-field" name="fabri">
