Puxando dados corretamente.

--- a/templates/simulador.html
+++ b/templates/simulador.html
@@ -15,7 +15,7 @@
         <h2>Empresa: {{ pedido['fabricante'] }} </h2>
         <p>Código do Pedido: {{ pedido['codigo'] }}</p>
     </div>
-
+<!-- 
     <div class="detalhes">
         <h3>Detalhes do Pedido</h3>
         <ul>
@@ -27,7 +27,19 @@
             <li>Número de Picking: {{ pedido['numPicking'] }} </li>
             <li>Total de Produtos Separados: {{ pedido['totalProd'] }} </li>
         </ul>
-    </div>
+    </div> -->
+
+    <p>Número do Picking: {{ pedido.num_picking }} </p>
+    <p>Endereçamento: {{ pedido.enderecamento }} </p>
+    <p>Descrição Técnica: {{ pedido.desc_tecnica }} </p>
+    <p>Modelo: {{ pedido.modelo }} </p>
+    <p>Fabricante: {{ pedido.fabricante }} </p>
+    <p>Quantidade: {{ pedido.quantidade }} </p>
+    <p>Data: {{ pedido.data }} </p>
+    <p>Lote: {{ pedido.lote }} </p>
+    <p>Total de Produtos Separados: {{ pedido.total_produtos }} </p>
+    <p>Código do Produto: {{ pedido.cod_prod }} </p>
+
 </section>
 
 {% endblock %}
