modo claro e escuro

--- a/static/styles/expedicao.css
+++ b/static/styles/expedicao.css
@@ -39,7 +39,9 @@ body{
 
 
 .formulario{
-    margin: 9rem 38rem;
+    margin-left: 26.5rem;
+    margin-top: 8rem;
+    margin-bottom: 10rem;
 }
   
 .form_container {
