--- a/templates/pagina-inicial.html
+++ b/templates/pagina-inicial.html
@@ -3,10 +3,11 @@
     
 <link rel="stylesheet" href="/static/styles/pagina-inicial.css">
 <link rel="stylesheet" href="/static/styles/media/pagina-inicial-media.css">
-<link rel="stylesheet" href="/static/styles/media/layout-media.css">
 <link rel="stylesheet" href="/static/styles/variaveis.css">
-<script src="https://unpkg.com/scrollreveal"></script>
+
+<script src="https://unpkg.com/scrollreveal" defer></script>
 <script src="/static/js/pagina-inicial.js" defer></script>
+<script src="/static/js/light&dark.js" defer></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
