--- a/static/styles/layout.css
+++ b/static/styles/layout.css
@@ -11,17 +11,25 @@
 
 /* ****************************** padronização/ estilização MENU ************************************ */
 
+.theme-container {
+  height: 100vh;
+  width: 100vw;
+  background-color: var(--cor-pagina-inicial);
+}
+
 /* Estilização do cabeçalho */
 .header-container{
-  width: 100vw;
-  height: 10vh;
+  width: 100%;
+  height: 100vh;
   display: flex;
   justify-content: space-between;
   align-items: center;
   position: fixed;
   left: 0;
   top: 0;
-  z-index: 1;
+  margin: 0;
+  background-color: var(--sidebar-bg-light);
+  transition: background-color 0.3s;
   
 }
 
@@ -30,7 +38,15 @@
   max-width: 11rem;
   max-height: 13rem;
   border-radius: 100%;
-  margin-top: 4rem;
+  margin-top: 2rem;
+}
+
+.button-container{
+  height: 3rem;
+  width: 4rem;
+  border-radius: 1.5rem;
+  border: none;
+  background-color: white;
 }
 
 /* Estilização do botão de dropdown */
@@ -160,4 +176,32 @@ footer p{
   font-weight: 700;
   font-style: normal;
   margin-top: 0.5rem;
+}
+
+/* **************************************** MODO CLARO E ESCURO *********************************************** */
+
+
+
+.theme-container {
+  margin: 0;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.theme-container.light {
+  background-color: var(--primary-color-light);
+  color: var(--text-color-light);
+}
+
+.theme-container.dark {
+  background-color: var(--primary-color-dark);
+  color: var(--text-color-dark);
+}
+
+.header-container {
+  background-color: var(--sidebar-bg-light);
+  transition: background-color 0.3s;
+}
+
+.theme-container.dark .header-container {
+  background-color: var(--sidebar-bg-dark);
 }
