--- a/static/styles/pagina-inicial.css
+++ b/static/styles/pagina-inicial.css
@@ -3,6 +3,7 @@ body, html {
   padding: 0;
   font-family: Arial, sans-serif;
   overflow-x: hidden;
+  transition: background-color 0.5s ease, color 0.5s ease;
 }
 
 .container-geral{
@@ -65,8 +66,6 @@ body, html {
 }
 
 .container-cards{
-
-  /* background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(53, 51, 205, 1) 3%, rgba(53, 51, 205, 1) 97%, rgba(255,255,255,1) 100%); */
   height: 100vh;
   width: 100vw;
   display: flex;
@@ -187,7 +186,7 @@ body, html {
 
 
 .mensagem p{
-  color:var(--cor-msg-professor);
+  color: var(--cor-msg-professor);
   font-size: 1.6rem;
   font-family: "Julius Sans One", sans-serif;
   font-weight: 400;
@@ -252,7 +251,7 @@ body, html {
   width: 200px;
   z-index: 5;
   margin-left: 0.5rem;
-  
+  z-index: 0;
   left: 10rem;
 }
 
