--- a/templates/listar_bancos.html
+++ b/templates/listar_bancos.html
@@ -33,4 +33,12 @@
     </table>
 </section>
 
+<script >
+    {% with messages = get_flashed_messages() %}
+        {% for mensagem in messages %}
+            {{ mensagem|safe }}
+        {% endfor %}
+    {% endwith %}
+</script>
+
 {% endblock %}
