--- a/templates/cadastramento.html
+++ b/templates/cadastramento.html
@@ -64,6 +64,14 @@
         </section>
         
 </section>
+
+<script >
+    {% with messages = get_flashed_messages() %}
+        {% for mensagem in messages %}
+            {{ mensagem|safe }}
+        {% endfor %}
+    {% endwith %}
+</script>
     
        
     
