--- a/templates/expedicao.html
+++ b/templates/expedicao.html
@@ -26,8 +26,8 @@
             </div>
 
             <div class="container-img"></div>
+        </div>
 
-        </section>
 
         <section class="container-tabela">
             <h1>Produtos Cadastrados</h1>
@@ -64,7 +64,7 @@
 
             <div class="form_container">
 
-                <form action="/estoque" method="POST">
+                <form action="/expedicao" method="POST">
 
                     <input type="text" placeholder="Código do Produto:" class="input-field" name="cod_prod">
 
