Preparando novo estilo

--- a/static/styles/variaveis.css
+++ b/static/styles/variaveis.css
@@ -14,8 +14,8 @@
 
     /* Cores da página inicial */
     --cor-pagina-inicial: rgba(255, 255, 255, 1);
-    --cor-titulo1-pgInicial: #6a00c2;
-    --cor-titulo2-pgInicial: #0071c2;
+    --cor-titulo1-pgInicial: #4c008a;
+    --cor-titulo2-pgInicial: #005897;
     --cor-msg-professor: #000000;
     --cor-card-mensagem: hsl(217, 100%, 90%);
 
