--- a/static/styles/layout.css
+++ b/static/styles/layout.css
@@ -14,7 +14,7 @@
 .theme-container {
   height: 100vh;
   width: 100vw;
-  background-color: var(--cor-pagina-inicial);
+ 
 }
 
 /* Estilização do cabeçalho */
@@ -22,15 +22,13 @@
   width: 100%;
   height: 100vh;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   position: fixed;
   left: 0;
   top: 0;
   margin: 0;
-  background-color: var(--sidebar-bg-light);
-  transition: background-color 0.3s;
-  
+  z-index: 1;
 }
 
 /* Estilização da imagem do logo */
@@ -61,7 +59,6 @@
     border: none;
     border-radius: 2rem;
     cursor: pointer;
-    margin-right: 6rem;
     text-transform: uppercase;
   }
   
@@ -197,11 +194,8 @@ footer p{
   color: var(--text-color-dark);
 }
 
-.header-container {
-  background-color: var(--sidebar-bg-light);
-  transition: background-color 0.3s;
-}
-
 .theme-container.dark .header-container {
   background-color: var(--sidebar-bg-dark);
 }
+
+
