--- a/static/styles/pagina-inicial.css
+++ b/static/styles/pagina-inicial.css
@@ -3,11 +3,11 @@ body, html {
   padding: 0;
   font-family: Arial, sans-serif;
   overflow-x: hidden;
-  transition: background-color 0.5s ease, color 0.5s ease;
+  scroll-behavior: smooth;
 }
 
 .container-geral{
-  background: var(--cor-pagina-inicial);
+  z-index: 0;
   height: 100vh;
   width: 100vw;
   
@@ -22,24 +22,33 @@ body, html {
   text-align: center;
 }
 
+.container-conteudo{
+  display: flex;
+  align-items: center;  
+  justify-content: space-around;
+}
+
+
+
 .titulo-destaque {
   display: flex;
-  align-items: center;
-  margin-bottom: 20px;
+  align-items:center;
+  margin-bottom: 2rem;
+  border-radius: 4.5rem;
+  padding: 0.5rem;
+  margin-top: 15rem;
 }
 
 .titulo-destaque .part1 {
-  font-size: 19rem;
+  font-size: 11rem;
   color: var(--cor-titulo1-pgInicial);
-  opacity: 0.7;
   font-family: "Unlock", serif;
   font-weight: 400;
   font-style: normal;
-  margin-left: 3rem;
 }
 
 .titulo-destaque .part2 {
-  font-size: 19rem;
+  font-size: 11rem;
   color: var(--cor-titulo2-pgInicial);
   font-family: "Unlock", serif;
   font-weight: 400;
@@ -47,23 +56,14 @@ body, html {
 }
 
 .titulo-destaque .partG {
-  font-size: 19rem;
+  font-size: 11rem;
   color: var(--cor-titulo1-pgInicial);
-  opacity: 0.7;
   font-family: "Unlock", serif;
   font-weight: 400;
   font-style: normal;
   margin-left: 0.5rem;
 }
 
-.container-grid {
-  width: 20rem;
-  height: 16rem;
-  /* background: linear-gradient(to bottom right, #a77aff, #65a3ff); */
-  filter: blur(3rem);
-  margin-bottom: 5rem;
-  border-radius: 2.5rem;
-}
 
 .container-cards{
   height: 100vh;
@@ -72,9 +72,9 @@ body, html {
   align-items: center;
   justify-content: center;
   max-width: 100%;
-  margin-top: 0.5rem;
   /*DEFINE OS ESPAÇOS ENTRE AS LINHAS E COLUNAS*/
   gap: 1;
+  background-color: var(--cor-pagina-inicial);
 }
 
 /*AQUI COMEÇA A GALERIA*/
@@ -160,30 +160,21 @@ body, html {
   width: 100%;
 }
 
-.titulomensagem-prof{
-  text-align: center;
-  margin-top: 4rem;
-  margin-bottom: 10rem;
+.mensagem_professor{
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--cor-pagina-inicial);
 }
 
 .titulomensagem-prof h2{
-
   font-size: 3.5rem;
   font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   color: var(--cor-msg-professor);
 }
-
-
-.container-mensagem_professor{
-  height: 30vh;
-  width: 40vw;
-  border-radius: 1.5rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-left: 29rem;
-}
-
 
 .mensagem p{
   color: var(--cor-msg-professor);
@@ -193,32 +184,6 @@ body, html {
   font-style: normal;
   text-align: center;
 }
-
-.mensagem{
-  width:  40vw;
-  height: 30vh;
-  margin-top: 1rem;
-  margin-top: 3rem;
-  margin-bottom: 20rem;
-  text-align: center;
-  border-radius: 2rem;
-  background-color:var(--cor-card-mensagem);
-  color: var(--cor-msg-professor);
-}
-
-
-/* .titulo-destaque {
-  visibility: visible; 
-}
-
-.mensagem {
-  visibility: visible; 
-}
-
-.c-galeria {
-  visibility: visible; 
-} */
-
 
 
 
@@ -246,9 +211,9 @@ body, html {
   background: linear-gradient(45deg, var(--third) 0%, var(--secondary) 100%);
   animation: morph 8s ease-in-out infinite;
   border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
-  height: 200px;
+  height:8rem ;
   transition: all 1s ease-in-out;
-  width: 200px;
+  width: 8rem;
   z-index: 5;
   margin-left: 0.5rem;
   z-index: 0;
@@ -271,4 +236,42 @@ body, html {
     border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
     background: linear-gradient(45deg, var(--primary) 0%, var(--secondary) 100%);
   }
+}
+
+.container-video{
+  width: 80vw;
+  height: 100vh;
+  background-color:var(--cor-btn-enviar);
+  opacity: 0.8;
+  z-index: -1;
+}
+
+.background-video {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: -1;
+  opacity: 0.5;
+}
+
+.background-video video {
+  min-width: 100%;
+  min-height: 100%;
+  object-fit: cover;
+}
+
+.dark-mode .mensagem_professor,
+.dark-mode .container-cards {
+    background-color: var(--primary-color-dark); /* Preto no modo escuro */
+}
+
+/* Modo escuro para o h2 da mensagem do professor */
+.dark-mode .titulomensagem-prof h2 {
+    color: var(--text-color-dark); /* Branco no modo escuro */
+}
+
+.container-mensagem_rolagem {
+  z-index: 5;
 }
