--- a/templates/pagina-inicial.html
+++ b/templates/pagina-inicial.html
@@ -115,16 +115,20 @@
 
     <div class="container-mensagem_professor">
 
-        
-
         <div class="mensagem">
-            {% for mensagem in lista_mensagens %}
             <div class="mensagem">
-                <p>{{mensagem['mensagem']}}</p>
+                {% for mensagem in lista_mensagens %}
+                <p>{{ mensagem['mensagem'] }}</p>
+                {% if "professor_logado" in session %}
+                <form action="{{ url_for('excluir_mensagem') }}" method="POST">
+                    <input type="hidden" name="mensagem_id" value="{{ mensagem['cod_mensagem'] }}">
+                    <button type="submit">EXCLUIR MENSAGEM</button>
+                </form>
+                {% endif %}
+                {% endfor %}
             </div>
-            {% endfor %}
         </div>
-
+        
     </div>
     {% endif %}
     <!-- Fim da seção de mensagem do professor -->
